# grammar

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  package.json  print_compile_commands.bat  print_compile_commands.sh  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-inferscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_inferscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterInferScript/: inferscript.h
bindings/swift/TreeSitterInferScriptTests/: TreeSitterInferScriptTests.swift
common/: define-grammar.js  scanner.include.c.h
is/: grammar.js
is/src/: grammar.json  node-types.json  parser.c  scanner.c
isd/: grammar.js
isd/src/: grammar.json  node-types.json  parser.c  scanner.c
isx/: grammar.js
isx/src/: grammar.json  node-types.json  parser.c  scanner.c
